--- a/package.json
+++ b/package.json
@@ -12,14 +12,20 @@
     "bcryptjs": "^3.0.2",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.4.7",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
+    "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.14.2",
     "mongoose": "^8.12.1",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.9",
+    "pdf-lib": "^1.17.1",
+    "pdf-poppler": "^0.2.1",
+    "pdfjs-dist": "^5.0.375",
+    "sharp": "^0.33.5",
     "socket.io": "^4.8.1"
   }
 }
